apps/app-1/virtual-services.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: first-app
  namespace: default
spec:
  hosts:
    - first-app
  http:
    - name: route-1
      match:
      - uri:
          prefix: /
      route:
        - destination:
            host: first-app
            subset: v1
          weight: 90
        - destination:
            host: first-app
            subset: v2
          weight: 10
          # mirror:
          #   host: argo-app
          #   subset: v1       

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rollouts-service
  namespace: default
spec:
  hosts:
    - rollouts-service
  http:
    - name: route-1
      match:
      - uri:
          prefix: /
      route:
        - destination:
            host: rollouts-service
            subset: v1
          weight: 50
        - destination:
            host: rollouts-service
            subset: v2 
          weight: 50

# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: argo-app
#   namespace: default
# spec:
#   hosts:
#     - argo-app
#   http:
#     - name: route-1
#       match:
#       - uri:
#           prefix: /
#       route:
#         - destination:
#             host: argo-app
#             subset: v1
